--- a/app/src/main/res/layout/gadget_row.xml
+++ b/app/src/main/res/layout/gadget_row.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="8dp"
     android:minHeight="56dp">
 
-    <RadioButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -79,4 +79,13 @@
         android:layout_alignTop="@+id/gadget_manufacturer"
         android:layout_toRightOf="@+id/gadget_name"
         android:layout_toEndOf="@+id/gadget_name" />
+
+    <Button
+        android:text="reserve"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/gadget_button"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
