--- a/app/src/main/res/layout/gadget_row.xml
+++ b/app/src/main/res/layout/gadget_row.xml
@@ -1,91 +1,93 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingEnd="16dp"
-    android:paddingRight="16dp"
-    android:paddingStart="16dp"
-    android:paddingLeft="16dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:minHeight="56dp">
+    android:orientation="horizontal"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardUseCompatPadding="true" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Name"
-        android:id="@+id/gadget_name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:orientation="vertical"
+        android:paddingEnd="16dp"
+        android:paddingRight="16dp"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:minHeight="56dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Manufacturer"
-        android:id="@+id/gadget_manufacturer"
-        android:layout_alignBottom="@+id/gadget_name"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Name"
+            android:id="@+id/gadget_name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Cond"
-        android:id="@+id/gadget_condition"
-        android:layout_below="@+id/gadget_manufacturer"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Manufacturer"
+            android:id="@+id/gadget_manufacturer"
+            android:layout_alignBottom="@+id/gadget_name"
+            android:layout_toRightOf="@+id/textView3"
+            android:layout_toEndOf="@+id/textView3" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text=" - "
-        android:id="@+id/textView4"
-        android:layout_below="@+id/gadget_manufacturer"
-        android:layout_toRightOf="@+id/gadget_condition"
-        android:layout_toEndOf="@+id/gadget_condition" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Cond"
+            android:id="@+id/gadget_condition"
+            android:layout_below="@+id/gadget_manufacturer"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Price"
-        android:id="@+id/gadget_price"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_toRightOf="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text=" - "
+            android:id="@+id/textView4"
+            android:layout_below="@+id/gadget_manufacturer"
+            android:layout_toRightOf="@+id/gadget_condition"
+            android:layout_toEndOf="@+id/gadget_condition" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text=" CHF"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/gadget_manufacturer"
-        android:layout_toRightOf="@+id/gadget_price"
-        android:layout_toEndOf="@+id/gadget_price" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Price"
+            android:id="@+id/gadget_price"
+            android:layout_alignTop="@+id/textView4"
+            android:layout_toRightOf="@+id/textView4"
+            android:layout_toEndOf="@+id/textView4" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text=" "
-        android:id="@+id/textView3"
-        android:layout_alignTop="@+id/gadget_manufacturer"
-        android:layout_toRightOf="@+id/gadget_name"
-        android:layout_toEndOf="@+id/gadget_name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text=" CHF"
+            android:id="@+id/textView6"
+            android:layout_below="@+id/gadget_manufacturer"
+            android:layout_toRightOf="@+id/gadget_price"
+            android:layout_toEndOf="@+id/gadget_price" />
 
-    <Button
-        android:text="reserve"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/gadget_button"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_alignParentTop="true" />
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text=" "
+            android:id="@+id/textView3"
+            android:layout_alignTop="@+id/gadget_manufacturer"
+            android:layout_toRightOf="@+id/gadget_name"
+            android:layout_toEndOf="@+id/gadget_name" />
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
