--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AlertDialogCustom">
+        <item name="android:background">@color/primary</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
